# rlwm_trauma_analysis

./: .gitignore  =0.8.0  =1.3.0  CITATION.cff  CLAUDE.md  EXCLUSION_REPORT.md  FOLDER_STRUCTURE_UPDATE.md  PARTICIPANT_EXCLUSIONS.md  README.md  RESULTS_SECTION_UPDATED.txt  SUPERVISOR_HANDOFF.md  add_10079_to_mapping.py  bash.exe.stackdump  check_10079.py  check_columns.py  check_data_for_fitting.py  check_demographics.py  check_exclusions.py  check_final_sample.py  check_id_match.py  check_id_overlap.py  check_jan_2026_files.py  check_problem_participants.py  check_summary_metrics.py  check_wmrl_files.py  config.py  environment.yml  environment_gpu.yml  example_dataset_pilot.csv  extract_all_demographics.py  filter_3participants.py  find_10079_data.py  find_807_trials.py  format_computational_results.py  format_feedback_perseveration_results.py  plotting_config.py  pre_phase29_cluster_gpu_lessons.sha256  pyproject.toml  pytest.ini  requirements-dev.txt  (+12 more)
.githooks/: pre-push
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v4.0-MILESTONE-AUDIT-preclose.md
cluster/: 00_precheck.sh  00_preflight.slurm  00_setup_env.sh  00_setup_env_gpu.sh  01_data_processing.slurm  01_diagnostic_gpu.slurm  02_behav_analyses.slurm  03_check_canary.slurm  03_prefitting_cpu.slurm  03_prefitting_gpu.slurm  03_submit_canary.sh  04a_mle_cpu.slurm  04a_mle_gpu.slurm  04b_bayesian_cpu.slurm  04b_bayesian_gpu.slurm  04c_level2.slurm  04c_level2_gpu.slurm  05_post_checks.slurm  06_fit_analyses.slurm  09_ppc_gpu.slurm  11_recovery_gpu.slurm  12_mle.slurm  12_mle_gpu.slurm  12_mle_single.slurm  12_submit_all.sh  12_submit_all_gpu.sh  13_bayesian_choice_only.slurm  13_bayesian_fullybatched_smoke.slurm  13_bayesian_gpu.slurm  13_bayesian_m1.slurm  13_bayesian_m2.slurm  13_bayesian_m3.slurm  13_bayesian_m4_gpu.slurm  13_bayesian_m5.slurm  13_bayesian_m6a.slurm  13_bayesian_m6b.slurm  13_bayesian_m6b_subscale.slurm  13_bayesian_multigpu.slurm  13_bayesian_permutation.slurm  13_bayesian_pscan.slurm  (+33 more)
data/: example_dataset_pilot.csv  participant_id_mapping.json  sync_log.txt
docs/: ANALYSIS_PIPELINE.md  CLUSTER_GPU_LESSONS.md  CODEBOOK.md  CONVERGENCE_ASSESSMENT.md  DEER_NONLINEAR_PARALLELIZATION.md  ENVIRONMENT_REFERENCE.md  HIERARCHICAL_BAYESIAN.md  K_PARAMETERIZATION.md  MODEL_REFERENCE.md  PARALLEL_SCAN_LIKELIHOOD.md  PLOTTING_REFERENCE.md  PROJECT_STRUCTURE.md  README.md  SCALES_AND_FITTING_AUDIT.md  plotting_config_guide.md  to-dos.md  trauma_group_analysis_guide.md
environments/: __init__.py  rlwm_env.py  task_config.py
fitting/: fit_to_data.py  pymc_models.py
logs/: 00_preflight_54947076.out  00_preflight_54957188.out  00_preflight_54957770.out  00_preflight_55004789.out  01_data_processing_54964819.out  01_data_processing_55004790.out  02_behav_analyses_55004791.err  02_behav_analyses_55004791.out  02_behav_analyses_55009115.out  03_check_canary_54964440.out  03_check_canary_54964726.out  03_prefitting_gpu_54957193.err  03_prefitting_gpu_54957193.out  03_prefitting_gpu_54957194.err  03_prefitting_gpu_54957194.out  03_prefitting_gpu_54957195.err  03_prefitting_gpu_54957195.out  03_prefitting_gpu_54957196.err  03_prefitting_gpu_54957196.out  03_prefitting_gpu_54957197.err  03_prefitting_gpu_54957197.out  03_prefitting_gpu_54957198.err  03_prefitting_gpu_54957198.out  03_prefitting_gpu_54957781.err  03_prefitting_gpu_54957781.out  03_prefitting_gpu_55009116.err  03_prefitting_gpu_55009116.out  03_prefitting_gpu_55009117.err  03_prefitting_gpu_55009117.out  03_prefitting_gpu_55009118.err  03_prefitting_gpu_55009118.out  03_prefitting_gpu_55009121.err  03_prefitting_gpu_55009121.out  03_prefitting_gpu_55009122.err  03_prefitting_gpu_55009122.out  03_prefitting_gpu_55009124.err  03_prefitting_gpu_55009124.out  03_prefitting_gpu_55009125.err  (+98 more)
manuscript/: _quarto.yml  (+4 more)
(+1245 files in other folders)
