# ===========================================================================
# pyproject.toml — RLWM Trauma Analysis
# ===========================================================================
# Project metadata, tool configuration (ruff, mypy, pytest).
# Based on project_utils/templates/pyproject_toml_template.toml
# ===========================================================================

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlwm-trauma-analysis"
version = "1.0.0"
description = "RLWM behavioral task analysis with computational modeling (Q-learning, WM-RL hybrid)"
requires-python = ">=3.10"
authors = [
    {name = "Adam Manoogian"},
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.0",
    "jax==0.9.0",
    "jaxlib==0.9.0",
    "jaxopt>=0.8",
    "joblib>=1.3",
    "matplotlib>=3.0",
    "seaborn>=0.13",
    "gymnasium>=0.28",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
bayesian = [
    "pymc>=5.0",
    "arviz>=0.15",
    "numpyro>=0.13",
]

# ===========================================================================
# ruff — linting + formatting
# ===========================================================================

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["data", "output", "figures", "cluster/logs", ".planning"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax — Dict→dict, Optional→|None, etc.)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "FA",   # flake8-future-annotations
]
ignore = [
    "E402",   # Module import not at top (sys.path pattern is intentional)
    "E501",   # Line too long (let formatter handle it)
    "E741",   # Ambiguous variable name (common in math: l, O, I)
    "B023",   # Function uses loop variable (common in JAX closures)
    "SIM108", # Ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["rlwm", "config", "models", "environments", "scripts"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"validation/**/*.py" = ["D"]
"scripts/**/*.py" = ["D103"]

# ===========================================================================
# mypy — static type checking
# ===========================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "statsmodels.*",
    "pymc.*",
    "arviz.*",
    "jax.*",
    "jaxlib.*",
    "jaxopt.*",
    "numpyro.*",
    "gymnasium.*",
    "gym.*",
    "psutil.*",
    "joblib.*",
]
ignore_missing_imports = true

# ===========================================================================
# pytest — testing
# ===========================================================================

[tool.pytest.ini_options]
testpaths = ["tests", "validation", "scripts/fitting/tests"]
addopts = "-v --tb=short --strict-markers --durations=10"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "requires_pymc: tests that require PyMC installation",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
